# podman

./: .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  README.md  codex_team_memory_redisgn.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
agents/podman-live-conversation/: .env.example  README.md  agent.py  pyproject.toml
agents/podman-live-conversation/tests/: test_agent_helpers.py
backend/: package.json  tsconfig.json
database/: README.md  init.ts
docs/: PLAN.md  cont_learning.md  demo-runbook.md  demo-setup.md  demo.md  demo_runbook.html  digitalocean.md  gemini.md  graph.md  hermes.md  idea.md  live-ui-spec.md  livekit.md  mongodb.md  stream-categorization.md  team-memory-redesign.md  test-audio.md
examples/livekit-gemini-hacker-starter/agent/: .env.example  README.md  agent.py  pyproject.toml  requirements.txt
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
infra/: Caddyfile  Dockerfile  README.md  app.yaml
podman-sync-artifacts/: podman-sync-1782618602369.md  podman-sync-1782624235527.md  podman-sync-1782624237067.md  podman-sync-1782624257374.md  podman-sync-1782625641072.md  podman-sync-1782625731979.md  podman-sync-1782626350439.md  podman-sync-1782626352966.md  podman-sync-1782627466536.md  podman-sync-1782627467363.md  podman-sync-1782627468040.md  podman-sync-1782627468666.md  podman-sync-1782627469304.md  podman-sync-1782627469430.md  podman-sync-1782627469577.md  podman-sync-1782628348630.md  podman-sync-1782628532829.md  podman-sync-1782628535141.md  podman-sync-1782628701349.md  podman-sync-1782629206081.md  (+10 more)
(+137 files in other folders)
