[project]
name = "podman-live-conversation"
version = "0.1.0"
description = "PodMan private LiveKit/Gemini live conversation agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "livekit-agents[google]>=1.6.4,<1.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
